--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,7 @@ jobs:
   # Push image to GitHub Package Registry.
   # See also https://docs.docker.com/docker-hub/builds/
   docker-image:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     permissions:
       packages: write
