Revert "Test bump gh os"
This reverts commit 33f00bda02880ca9d8604e9a64292cfac4719acb.

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,7 @@ jobs:
   # Push image to GitHub Package Registry.
   # See also https://docs.docker.com/docker-hub/builds/
   docker-image:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
 
     permissions:
       packages: write
