--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ endif ()
 
 # Find packages.
 find_package(OpenSSL 3.0.0 REQUIRED COMPONENTS Crypto)
+find_package(ZLIB REQUIRED)
 
 find_package(fmt 8.1.1 CONFIG)
 if (NOT fmt_FOUND)
