--- a/config.lua.dist
+++ b/config.lua.dist
@@ -38,10 +38,10 @@ maxPacketsPerSecond = 25
 enableTwoFactorAuth = true
 
 -- Pathfinding
--- NOTE: pathfindingInterval how often paths are force drawn
--- NOTE: pathfindingDelay delay recently force drawn paths from drawing again
-pathfindingInterval = 100
-pathfindingDelay = 200
+-- pathfindingInterval how often paths are force drawn
+-- pathfindingDelay delay recently force drawn paths from drawing again
+pathfindingInterval = 200
+pathfindingDelay = 300
 
 -- Deaths
 -- NOTE: Leave deathLosePercent as -1 if you want to use the default
