Add simdutf support for parsing network messages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,14 @@ else()
     list(APPEND VCPKG_MANIFEST_FEATURES "lua")
 endif()
 
+option(USE_SIMDUTF "Use simdutf for UTF-8 validation" ON)
+if (USE_SIMDUTF)
+    list(APPEND VCPKG_MANIFEST_FEATURES "simdutf")
+    add_compile_definitions(USE_SIMDUTF)
+else()
+    list(APPEND VCPKG_MANIFEST_FEATURES "boost-locale")
+endif ()
+
 project(tfs CXX)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
@@ -76,6 +84,11 @@ if (USE_LUAJIT)
     find_package(LuaJIT REQUIRED)
 else ()
     find_package(Lua REQUIRED)
+endif ()
+
+# Find simdutf if enabled
+if (USE_SIMDUTF)
+    find_package(simdutf CONFIG REQUIRED)
 endif ()
 
 if (APPLE)
