Link against correct libraries

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -174,11 +174,9 @@ add_library(tfslib ${tfs_SRC})
 target_link_libraries(tfslib PRIVATE
 	Boost::iostreams
 	Boost::system
-	Boost::locale
 	fmt::fmt
 	OpenSSL::Crypto
 	pugixml::pugixml
-	simdutf::simdutf
 	ZLIB::ZLIB
 	${CMAKE_THREAD_LIBS_INIT}
 	${LUA_LIBRARIES}
@@ -193,6 +191,12 @@ endif()
 if (HTTP)
 	add_subdirectory(http)
 	target_link_libraries(tfslib PRIVATE http)
+endif ()
+
+if (USE_SIMDUTF)
+	target_link_libraries(tfslib PRIVATE simdutf::simdutf)
+else ()
+	target_link_libraries(tfslib PRIVATE Boost::locale)
 endif ()
 
 add_custom_target(format COMMAND /usr/bin/clang-format -style=file -i ${tfs_HDR} ${tfs_SRC} ${tfs_MAIN})
