--- a/.github/workflows/build-vcpkg.yml
+++ b/.github/workflows/build-vcpkg.yml
@@ -45,6 +45,9 @@ jobs:
           languages: cpp
           # For more details on CodeQL's query packs, refer to: https://docs.github.com/en/code-security/code-scanning/automatically-scanning-your-code-for-vulnerabilities-and-errors/configuring-code-scanning#using-queries-in-ql-packs
           queries: +security-extended,security-and-quality
+          config: |
+            paths-ignore:
+              - 'vcpkg/**'
         if: ${{ matrix.os == 'ubuntu' && matrix.buildtype == 'Debug' }}
 
       - name: Get latest CMake
