replace 'restart: on-failure' with 'restart: unless-stopped'

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ services:
   ots:
     build:
       context: .
-    restart: on-failure
+    restart: unless-stopped
     deploy:
       restart_policy:
         condition: any
