--- a/config.lua.dist
+++ b/config.lua.dist
@@ -27,6 +27,7 @@ gameProtocolPort = 7172
 statusProtocolPort = 7171
 httpPort = 8080
 httpWorkers = 1
+sessionSecret = "c2VjcmV0"  -- CHANGE THIS VALUE!
 maxPlayers = 0
 onePlayerOnlinePerAccount = true
 allowClones = false
