--- a/config.lua.dist
+++ b/config.lua.dist
@@ -19,6 +19,7 @@ expFromPlayersLevelRange = 75
 -- Connection Config
 -- NOTE: maxPlayers set to 0 means no limit
 -- NOTE: allowWalkthrough is only applicable to players
+-- NOTE: statusCountMaxPlayersPerIp allows you to only count up to X players per IP in status response (0 = disabled)
 ip = "127.0.0.1"
 bindOnlyGlobalAddress = false
 loginProtocolPort = 7171
@@ -31,6 +32,7 @@ allowClones = false
 allowWalkthrough = true
 serverName = "Forgotten"
 statusTimeout = 5000
+statusCountMaxPlayersPerIp = 0
 replaceKickOnLogin = true
 maxPacketsPerSecond = 25
 
