--- a/.github/workflows/build-vcpkg.yml
+++ b/.github/workflows/build-vcpkg.yml
@@ -40,7 +40,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - run: sudo update-alternatives --set g++ /usr/bin/g++-14
+      - run: |
+          sudo apt-get update && sudo apt-get install -y g++-14
+          sudo update-alternatives --set g++ /usr/bin/g++-14
         if: ${{ matrix.os == 'ubuntu' }}
 
       - name: Initialize CodeQL
