Ubuntu is a fucking disgrace

--- a/.github/workflows/build-vcpkg.yml
+++ b/.github/workflows/build-vcpkg.yml
@@ -42,7 +42,7 @@ jobs:
 
       - run: |
           sudo apt-get update && sudo apt-get install -y g++-14
-          sudo update-alternatives --set g++ /usr/bin/g++-14
+          sudo update-alternatives --list g++
         if: ${{ matrix.os == 'ubuntu' }}
 
       - name: Initialize CodeQL
