--- a/.github/workflows/build-vcpkg.yml
+++ b/.github/workflows/build-vcpkg.yml
@@ -41,8 +41,8 @@ jobs:
       - uses: actions/checkout@v4
 
       - run: |
-          sudo apt-get update && sudo apt-get install -y g++-14
-          sudo update-alternatives --list c++
+          sudo update-alternatives --install /usr/bin/g++ c++ /usr/bin/g++-14 100
+          sudo update-alternatives --set c++ /usr/bin/g++-14
         if: ${{ matrix.os == 'ubuntu' }}
 
       - name: Initialize CodeQL
