--- a/.github/workflows/build-vcpkg.yml
+++ b/.github/workflows/build-vcpkg.yml
@@ -39,6 +39,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - run: echo CXX=g++-14 >> $GITHUB_ENV
+        if: ${{ matrix.os == 'macos' || matrix.os == 'ubuntu' }}
+
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
