chore(vs build): update for VS2026 v14.50

--- a/vc145/theforgottenserver.vcxproj.filters
+++ b/vc145/theforgottenserver.vcxproj.filters
@@ -21,6 +21,27 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\http\cacheinfo.cpp">
+      <Filter>Source Files\http</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\http\error.cpp">
+      <Filter>Source Files\http</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\http\http.cpp">
+      <Filter>Source Files\http</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\http\listener.cpp">
+      <Filter>Source Files\http</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\http\login.cpp">
+      <Filter>Source Files\http</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\http\router.cpp">
+      <Filter>Source Files\http</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\http\session.cpp">
+      <Filter>Source Files\http</Filter>
+    </ClCompile>
     <ClCompile Include="..\src\actions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -192,6 +213,9 @@
     <ClCompile Include="..\src\protocolold.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\protocolstatus.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="..\src\rsa.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -217,9 +241,6 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\src\storeinbox.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\protocolstatus.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\src\talkaction.cpp">
@@ -255,29 +276,29 @@
     <ClCompile Include="..\src\xtea.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\http\cacheinfo.cpp">
-      <Filter>Source Files\http</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\http\error.cpp">
-      <Filter>Source Files\http</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\http\http.cpp">
-      <Filter>Source Files\http</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\http\listener.cpp">
-      <Filter>Source Files\http</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\http\login.cpp">
-      <Filter>Source Files\http</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\http\router.cpp">
-      <Filter>Source Files\http</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\http\session.cpp">
-      <Filter>Source Files\http</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\src\http\cacheinfo.h">
+      <Filter>Header Files\http</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\http\error.h">
+      <Filter>Header Files\http</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\http\http.h">
+      <Filter>Header Files\http</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\http\listener.h">
+      <Filter>Header Files\http</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\http\login.h">
+      <Filter>Header Files\http</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\http\router.h">
+      <Filter>Header Files\http</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\http\session.h">
+      <Filter>Header Files\http</Filter>
+    </ClInclude>
     <ClInclude Include="..\src\actions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -398,6 +419,9 @@
     <ClInclude Include="..\src\luascript.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\luavariant.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="..\src\mailbox.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -428,6 +452,9 @@
     <ClInclude Include="..\src\otpch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\otserv.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="..\src\outfit.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -456,6 +483,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\protocolold.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\protocolstatus.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\pugicast.h">
@@ -489,9 +519,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\storeinbox.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\protocolstatus.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\talkaction.h">
@@ -532,27 +559,6 @@
     </ClInclude>
     <ClInclude Include="..\src\xtea.h">
       <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\http\session.h">
-      <Filter>Header Files\http</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\http\router.h">
-      <Filter>Header Files\http</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\http\login.h">
-      <Filter>Header Files\http</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\http\listener.h">
-      <Filter>Header Files\http</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\http\http.h">
-      <Filter>Header Files\http</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\http\cacheinfo.h">
-      <Filter>Header Files\http</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\http\error.h">
-      <Filter>Header Files\http</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
