--- a/.github/workflows/build-vcpkg.yml
+++ b/.github/workflows/build-vcpkg.yml
@@ -39,6 +39,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Cache vcpkg
+        uses: actions/cache@v4.3.0
+        with:
+          path: |
+            ./vcpkg/installed
+            ./vcpkg/packages
+          key: vcpkg-${{ runner.os }}-${{ hashFiles('vcpkg.json') }}
+          restore-keys: |
+            vcpkg-${{ runner.os }}-
+
       - run: echo CXX=g++-14 >> $GITHUB_ENV
         if: ${{ matrix.os == 'macos' || matrix.os == 'ubuntu' }}
 
