chore(workflow): update workflows to run against dev, lockdown permissions

--- a/.github/workflows/clang-format.yml
+++ b/.github/workflows/clang-format.yml
@@ -1,9 +1,12 @@
 name: Check code style
 
+permissions:
+  contents: read
+
 on:
   push:
     branches:
-      - master
+      - dev
       - v*
 
     paths:
