--- a/.github/workflows/lua-check.yml
+++ b/.github/workflows/lua-check.yml
@@ -1,9 +1,12 @@
 name: Lua syntax check, lint, and format
 
+permissions:
+  contents: read
+
 on:
   push:
     branches:
-      - master
+      - dev
       - v*
 
     paths:
