--- a/.github/workflows/build-vcpkg.yml
+++ b/.github/workflows/build-vcpkg.yml
@@ -1,9 +1,12 @@
 name: Build with vcpkg
 
+permissions:
+  contents: read
+
 on:
   push:
     branches:
-      - master
+      - dev
       - v*
 
     paths:
@@ -104,13 +107,3 @@ jobs:
           path: |
             ${{ github.workspace }}/build/${{ matrix.buildtype }}/tfs.exe
             ${{ github.workspace }}/build/${{ matrix.buildtype }}/*.dll
-
-      - name: Prepare datapack contents
-        run: find . -maxdepth 1 ! -name data ! -name config.lua.dist ! -name key.pem ! -name LICENSE ! -name README.md ! -name schema.sql -exec rm -r {} \;
-        shell: bash
-
-      - name: Upload datapack contents
-        uses: actions/upload-artifact@v4
-        with:
-          name: tfs-${{ matrix.os }}-${{ matrix.buildtype }}-luajit=${{ matrix.luajit }}-${{ github.sha }}
-          path: ${{ github.workspace }}
