--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,12 +1,7 @@
-name: Docker
-
-permissions:
-  contents: read
-  packages: write
+name: Create and publish a Docker image
 
 on:
   push:
-    # Publish `dev` as Docker `latest` image.
     branches:
       - dev
 
@@ -28,10 +23,13 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
+      contents: read
       packages: write
+      attestations: write
+      id-token: write
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -43,16 +41,24 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push
-        uses: docker/build-push-action@v5
-        if: github.ref_type == 'tag'
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5
         with:
-          push: true
-          tags: ghcr.io/${{ github.repository }}:${{ github.ref_name }}
+          images: ghcr.io/${{ github.repository }}
 
-      - name: Build and push
-        uses: docker/build-push-action@v5
-        if: github.event_name == 'pull_request' || github.ref_type == 'branch'
+      - name: Build and push Docker image
+        id: push
+        uses: docker/build-push-action@v6
         with:
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ghcr.io/${{ github.repository }}:latest
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v3
+        with:
+          subject-name: ghcr.io/${{ github.repository }}
+          subject-digest: ${{ steps.push.outputs.digest }}
+          push-to-registry: true
