refactor: smart all the Things (#1)
- Uses shared_ptr for all entities deriving from Thing
- Get rid of Cylinder in favor of moving behavior to Thing
- Fix userdata handling for shared ptrs, fix unchecked derefs
- Pass all non-owning shared_ptrs as const&

<!-- Note: Lines with this <!-- syntax are comments and will not be
visible in
     your pull request. You can safely ignore or remove them. -->

[cont]: https://github.com/otland/forgottenserver/wiki/Contributing
[code]:
https://github.com/otland/forgottenserver/wiki/TFS-Coding-Style-Guide

---------

Co-authored-by: ramon-bernardo <ramonbernardo.contato@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,8 @@ if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
     add_compile_options(-Wimplicit-fallthrough -Wmove)
 endif ()
 
+add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/bigobj>")
+
 # Find packages.
 find_package(OpenSSL 3.0.0 REQUIRED COMPONENTS Crypto)
 find_package(simdutf CONFIG REQUIRED)
