fix(vcxproj): repair project filters and file includes (#17)
Added the new serverinfo files to the project, removed the old protocol sources that are no longer used and fixed the project filters so everything appears in the right place in Visual Studio

--- a/vc17/theforgottenserver.vcxproj
+++ b/vc17/theforgottenserver.vcxproj
@@ -195,6 +195,7 @@
     <ClCompile Include="..\src\http\listener.cpp" />
     <ClCompile Include="..\src\http\login.cpp" />
     <ClCompile Include="..\src\http\router.cpp" />
+    <ClCompile Include="..\src\http\serverinfo.cpp" />
     <ClCompile Include="..\src\http\session.cpp" />
     <ClCompile Include="..\src\inbox.cpp" />
     <ClCompile Include="..\src\iologindata.cpp" />
@@ -288,6 +289,7 @@
     <ClInclude Include="..\src\http\listener.h" />
     <ClInclude Include="..\src\http\login.h" />
     <ClInclude Include="..\src\http\router.h" />
+    <ClInclude Include="..\src\http\serverinfo.h" />
     <ClInclude Include="..\src\http\session.h" />
     <ClInclude Include="..\src\inbox.h" />
     <ClInclude Include="..\src\iologindata.h" />
